slurm-output/2933803.log
Mon 10 Apr 11:14:07 BST 2023
  File "src/train_segmentation.py", line 73
    if not cfg.continuousp_PzeMSVi0sFbksLqdjTVQgEVa9Im1rM1FfHb8
                                                              ^
SyntaxError: invalid syntax
Mon 10 Apr 11:14:07 BST 2023
